# visionsystemx

./: .gitignore  CMakeLists.txt  README.md  package.xml  template.launch.py
config/: primary_yolo_classes.yaml  projection.yaml  secondary_yolo_classes.yaml
launch/: cam.launch.py  cam_lidar.launch.py  lidar.launch.py  rosbag.launch.py  simulation.launch.py  vision.launch.py  vision.launch_2.py  vision.launch_2noLiDAR.py  vision.launch_noLiDAR.py  yolo.launch.py  yolo.launch_2.py  yolo.launch_3.py  yolo.launch_both.py  yolo.launch_secondary.py
scripts/: converter.py  gz.py  lidar_camera.py  semaphore.py
src/: beeblebrox.cpp  bytetrack.hpp  zed.hpp
src/detectors/shapes/: shapes.py
src/detectors/yolo_tensorrt/: common.hpp  yolo_tensorrt.hpp  yolo_tensorrt_node.cpp
src/lidar/: translation.cpp
